<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>multi-module-gatling-for-redline13</artifactId>
        <groupId>multi-module-gatling-for-redline13</groupId>
        <version>0.1</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>test-runner</artifactId>

    <dependencies>
        <dependency>
            <groupId>multi-module-gatling-for-redline13</groupId>
            <artifactId>module1</artifactId>
            <version>0.1</version>
        </dependency>
        <dependency>
            <groupId>multi-module-gatling-for-redline13</groupId>
            <artifactId>module2</artifactId>
            <version>0.1</version>
        </dependency>
        <dependency>
            <groupId>multi-module-gatling-for-redline13</groupId>
            <artifactId>module3</artifactId>
            <version>0.1</version>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>src/test/scala</sourceDirectory>
        <testSourceDirectory>src/test/scala</testSourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.4.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <shadedArtifactAttached>true</shadedArtifactAttached>
                            <shadedClassifierName>allinone</shadedClassifierName>
                            <artifactSet>
                                <includes>
                                    <include>*:*</include>
                                </includes>
                            </artifactSet>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                    <resource>reference.conf</resource>
                                </transformer>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.scala-tools</groupId>
                <artifactId>maven-scala-plugin</artifactId>
                <version>2.15.2</version>
                <executions>
                    <execution>
                        <id>scala-compile</id>
                        <goals>
                            <goal>compile</goal>
                            <goal>testCompile</goal>
                        </goals>
                        <configuration>
                            <jvmArgs>
                                <jvmArg>-Xms64m</jvmArg>
                                <jvmArg>-Xmx1624m</jvmArg>
                            </jvmArgs>
                            <args>
                                <!--<arg>-make:transitive</arg>-->
                                <arg>-dependencyfile</arg>
                                <arg>${project.build.directory}/.scala_dependencies</arg>
                            </args>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>io.gatling</groupId>
                <artifactId>gatling-maven-plugin</artifactId>
                <version>${gatling-plugin.version}</version>
                <configuration>
                    <!-- Default values -->
                    <configFolder>src/test/resources</configFolder>
                    <dataFolder>src/test/resources/data</dataFolder>
                    <resultsFolder>target/gatling/results</resultsFolder>
                    <simulationsFolder>src/test/scala/com/oricohen/gatlingforredline13/simulations/</simulationsFolder>
                </configuration>
                <executions>
                    <execution>
                        <phase>test</phase>
                        <goals>
                            <goal>execute</goal>
                        </goals>
                        <configuration>
                            <jvmArgs>
                                <jvmArg>-server</jvmArg>
                                <jvmArg>-XX:+UseThreadPriorities</jvmArg>
                                <jvmArg>-XX:ThreadPriorityPolicy=42</jvmArg>
                                <jvmArg>-Xms512M</jvmArg>
                                <jvmArg>-Xmx2g</jvmArg>
                                <jvmArg>-Xmn200M</jvmArg>
                                <jvmArg>-Xss2M</jvmArg>
                                <jvmArg>-Xdebug</jvmArg>
                                <jvmArg>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5050</jvmArg>
                                <jvmArg>-XX:+HeapDumpOnOutOfMemoryError</jvmArg>
                                <jvmArg>-XX:+AggressiveOpts</jvmArg>
                                <jvmArg>-XX:+OptimizeStringConcat</jvmArg>
                                <jvmArg>-XX:+UseFastAccessorMethods</jvmArg>
                                <jvmArg>-XX:+UseParNewGC</jvmArg>
                                <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
                                <jvmArg>-XX:+CMSParallelRemarkEnabled</jvmArg>
                                <jvmArg>-XX:+CMSClassUnloadingEnabled</jvmArg>
                                <jvmArg>-XX:CMSInitiatingOccupancyFraction=75</jvmArg>
                                <jvmArg>-XX:+UseCMSInitiatingOccupancyOnly</jvmArg>
                                <jvmArg>-XX:SurvivorRatio=8</jvmArg>
                                <jvmArg>-XX:MaxTenuringThreshold=1</jvmArg>
                                <jvmArg>-Djava.security.egd=file:/dev/./urandom</jvmArg>
                            </jvmArgs>
                            <configFolder>src/test/resources</configFolder>
                            <dataFolder>src/test/resources/data</dataFolder>
                            <noReports>true</noReports>
                            <resultsFolder>${project.basedir}/../output</resultsFolder>
                            <simulationsFolder>src/test/scala/com/oricohen/gatlingforredline13/simulations</simulationsFolder>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.scala-tools</groupId>
                <artifactId>maven-scala-plugin</artifactId>
                <configuration>
                    <scalaVersion>2.11.8</scalaVersion>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
</project>
